sumo/tests/netgen/errors/unknown_option/errors.netgen
Error: On processing option '--test_this_funky_but_not_exitsing_option':
 No option with the name 'test_this_funky_but_not_exitsing_option' exists.
Error: Could not parse commandline options.
Quitting (on error).
